--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "main": "index.js",
   "repository": "git@github.com:bryan-lima/nlw-4-nodejs.git",
   "author": "Bryan <bryanlima200@outlook.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
