--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.20",
     "@types/uuid": "^8.3.0",
+    "jest": "^26.6.3",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.2"
   }
