--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/jest": "^26.0.20",
     "@types/uuid": "^8.3.0",
     "jest": "^26.6.3",
+    "ts-jest": "^26.5.2",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.2"
   }
